added auth flow
add new auth routes
updated test routes
updated swagger
reduced deps
